<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.AddProductFragment">

    <!-- Enter Product Details -->
    <TextView
        android:id="@+id/productDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_product_details"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textFontWeight="@integer/google_play_services_version"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>

    <!-- Product Name -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilProductName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/product_name"
        app:layout_constraintTop_toBottomOf="@id/productDetails"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="15dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etProductName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Selling Price -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilSellingPrice"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/selling_price"
        app:layout_constraintTop_toBottomOf="@id/tilProductName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="15dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSellingPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Tax Rate -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilTaxRate"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/tax_rate"
        app:layout_constraintTop_toBottomOf="@id/tilSellingPrice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="15dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTaxRate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Spinner -->
    <Spinner
        android:id="@+id/productTypeSp"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilTaxRate"/>

    <!-- Image Upload Button -->
    <Button
        android:id="@+id/uploadImageBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/upload_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:cornerRadius="15dp"
        android:backgroundTint="@color/teal_200"
        app:layout_constraintTop_toBottomOf="@id/productTypeSp"/>

    <!-- Submit Button -->
    <Button
        android:id="@+id/submitBtn"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:backgroundTint="#FFA351"
        android:text="@string/submit"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:cornerRadius="15dp"
        app:layout_constraintTop_toBottomOf="@id/uploadImageBtn"/>




</androidx.constraintlayout.widget.ConstraintLayout>