<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="170dp"
    android:orientation="vertical"
    android:id="@+id/singleItemLayout">

    <ImageView
        android:id="@+id/product_image"
        android:layout_width="140dp"
        android:layout_height="120dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.036"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/product_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/product_name"
        android:textSize="23sp"
        android:textColor="@color/black"
        android:textFontWeight="@integer/material_motion_duration_short_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/product_image"
        app:layout_constraintTop_toTopOf="@+id/product_image"
        android:layout_marginStart="16dp"/>

    <TextView
        android:id="@+id/product_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:text="@string/product_price"
        android:textColor="@color/black"
        android:textFontWeight="@integer/material_motion_duration_short_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/product_image"
        app:layout_constraintTop_toBottomOf="@+id/product_name"
        android:layout_marginStart="16dp"/>

    <TextView
        android:id="@+id/tax"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tax"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/product_image"
        app:layout_constraintTop_toBottomOf="@+id/product_price"
        android:layout_marginStart="16dp"/>

    <TextView
        android:id="@+id/product_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/product_type"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/product_image"
        app:layout_constraintTop_toBottomOf="@+id/tax"
        android:layout_marginStart="16dp"/>


    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/product_image"
        android:layout_marginTop="16dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>